configurando git no atom

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						font-size: 18pt;
 					}
 				</style>
-	</head> <!-- teste -->
+	</head> <!-- teste 2 -->
 	<body >
 		<header>
 			<figure id="logo">
