testando commit no atom

--- a/index2.html
+++ b/index2.html
@@ -92,7 +92,7 @@
                 		<input name="massa" id="massform" type="text" placeholder="Massa corporal (Kg)" required />
                 		<input name="altura" id="altform" type="text" placeholder="Altura (m)" required/>
                         <select name="sexo" id="selectSex" placeholder="Informe o seu sexo">
-                        	<option if="n" value="0">Selecione o seu sexo</option>
+                        	<option id="n" value="0">Selecione o seu sexo</option>
                         	<option id="f" value="fem">Feminino</option>
                         	<option id="m" value="mas">Masculino</option>
                         </select>
