atualizando box do facebook

--- a/sobre.html
+++ b/sobre.html
@@ -1,8 +1,8 @@
 ﻿<!doctype html>
 <html lang="pt-br">
 	<head>
-		<meta charset="utf-8"/>	   
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>  
+		<meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title>Reufi | Sobre nós</title>
         <link rel="icon" href="img/logo/logo2.png"/>
         <!-- DESIGN BY "JOÃO PAULO CARVALHO" -->
@@ -49,7 +49,7 @@
 		<div class="interface">
 			<nav class="menu">
    				<ul type="disc">
-        			<h1> Menu Principal </h1> 
+        			<h1> Menu Principal </h1>
         			<li><a href="index.html"> Home </a></li>
         			<li><a href="eaeNutri.html"> Iae Nutri </a></li>
         			<li><a href="sobre.html" id="here"> Sobre nós </a></li>
@@ -147,7 +147,7 @@
 				<div class="fbox" id="curtidas">
 					<h1>Fã Page</h1>
 					<h2>Curta nossa pagina do Facebook</h2>
-					<iframe id="curti" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Freufi.tavis%2F&tabs&width=340&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=938081739601081" width="100%" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+					<iframe id="curti" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FProjectReufi%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=512147582177041" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 				</div>
 				<div class="fbox" id="comentarios">
 					<h1>Dê a sua opnião</h1>
