--- a/fotos.html
+++ b/fotos.html
@@ -20,7 +20,7 @@
 			}
 			@media screen and (max-width: 1079px) {
 				#ajud a {
-					margin: -96px auto -10px auto;  
+					margin: -96px auto -10px auto;
 				}
 			}
 		</style>
@@ -85,7 +85,7 @@
 				<div class="fbox" id="curtidas">
 					<h1>Fã Page</h1>
 					<h2>Curta nossa pagina do Facebook</h2>
-					<iframe id="curti" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Freufi.tavis%2F&tabs&width=340&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=938081739601081" width="100%" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+					<iframe id="curti" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FProjectReufi%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=512147582177041" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 				</div>
 				<div class="fbox" id="comentarios">
 					<h1>Dê a sua opnião</h1>
