corrigindo largura do box do facebook

--- a/sobre.html
+++ b/sobre.html
@@ -147,7 +147,7 @@
 				<div class="fbox" id="curtidas">
 					<h1>Fã Page</h1>
 					<h2>Curta nossa pagina do Facebook</h2>
-					<iframe id="curti" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FProjectReufi%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=512147582177041" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+					<iframe id="curti" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FProjectReufi%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=512147582177041" width="100%" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 				</div>
 				<div class="fbox" id="comentarios">
 					<h1>Dê a sua opnião</h1>
